--- a/layout/product-2.html
+++ b/layout/product-2.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20231222111328">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20231222111328">
-	<link rel="stylesheet" href="css/style.min.css?_v=20231222111328">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20231222175319">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20231222175319">
+	<link rel="stylesheet" href="css/style.min.css?_v=20231222175319">
 
 
 </head>
@@ -230,8 +230,31 @@
 							<div class="main__product">
 								<div class="main__product-side">
 									<div class="main__product-content">
-										<div class="main__product-image">
+										<a href="img/products/product-1.png" data-fslightbox class="main__product-image swiper-slide">
 											<picture><source srcset="img/products/product-1.webp"type="image/webp"><img src="img/products/product-1.png" class="cover-image" alt="product"></picture>
+										</a>
+										<div class="main__product-footer">
+											<div class="main__product-thumbs swiper">
+												<div class="swiper-wrapper">
+													<a href="img/products/product-2.png" data-fslightbox class="main__product-slide swiper-slide">
+														<picture><source srcset="img/products/product-2.webp"type="image/webp"><img src="img/products/product-2.png" class="cover-image" alt="product"></picture>
+													</a>
+													<a href="img/products/product-3.png" data-fslightbox class="main__product-slide swiper-slide">
+														<picture><source srcset="img/products/product-3.webp"type="image/webp"><img src="img/products/product-3.png" class="cover-image" alt="product"></picture>
+													</a>
+													<a href="img/products/product-1.png" data-fslightbox class="main__product-slide swiper-slide">
+														<picture><source srcset="img/products/product-1.webp"type="image/webp"><img src="img/products/product-1.png" class="cover-image" alt="product"></picture>
+													</a>
+													<a href="img/products/product-2.png" data-fslightbox class="main__product-slide swiper-slide">
+														<picture><source srcset="img/products/product-2.webp"type="image/webp"><img src="img/products/product-2.png" class="cover-image" alt="product"></picture>
+													</a>
+													<a href="img/products/product-3.png" data-fslightbox class="main__product-slide swiper-slide">
+														<picture><source srcset="img/products/product-3.webp"type="image/webp"><img src="img/products/product-3.png" class="cover-image" alt="product"></picture>
+													</a>
+												</div>
+											</div>
+											<div class="main__product-next"></div>
+											<div class="main__product-prev"></div>
 										</div>
 										<a href="tel:884323338888" class="main__product-label product-label icon-phone">
 											<span class="product-label__title">
@@ -334,6 +357,383 @@
 											</td>
 										</tr>
 									</table>
+								</div>
+								<div>
+									<table align="center" border="1" cellpadding="0" cellspacing="0">
+										<thead>
+											<tr>
+												<th scope="col">
+													<p><strong>Модификация</strong></p>
+												</th>
+												<th scope="col">
+													<p><strong>цвет заглушки</strong></p>
+												</th>
+												<th scope="col">
+													<p><strong>цвет заглушки</strong></p>
+												</th>
+												<th scope="col">
+													<p><strong>сечение мм&sup2;</strong></p>
+												</th>
+												<th scope="col">
+													<p><strong>сечение мм&sup2;</strong></p>
+												</th>
+												<th scope="col">
+													<p><strong>матрица</strong></p>
+												</th>
+												<th scope="col">
+													<p><strong>масса, г</strong></p>
+												</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>
+													<p>MJPB 4</p>
+												</td>
+												<td>
+													<p style="text-align:center">синий</p>
+												</td>
+												<td>
+													<p style="text-align:center">синий</p>
+												</td>
+												<td>
+													<p style="text-align:center">4</p>
+												</td>
+												<td>
+													<p style="text-align:center">4</p>
+												</td>
+												<td>
+													<p style="text-align:center">Е140</p>
+												</td>
+												<td>
+													<p style="text-align:center">26</p>
+												</td>
+											</tr>
+											<tr>
+												<td>
+													<p>MJPB 4-6</p>
+												</td>
+												<td>
+													<p style="text-align:center">синий</p>
+												</td>
+												<td>
+													<p style="text-align:center">коричневый</p>
+												</td>
+												<td>
+													<p style="text-align:center">4</p>
+												</td>
+												<td>
+													<p style="text-align:center">6</p>
+												</td>
+												<td>
+													<p style="text-align:center">Е140</p>
+												</td>
+												<td>
+													<p style="text-align:center">25</p>
+												</td>
+											</tr>
+											<tr>
+												<td>
+													<p>MJPB 4-10</p>
+												</td>
+												<td>
+													<p style="text-align:center">синий</p>
+												</td>
+												<td>
+													<p style="text-align:center">зеленый</p>
+												</td>
+												<td>
+													<p style="text-align:center">4</p>
+												</td>
+												<td>
+													<p style="text-align:center">10</p>
+												</td>
+												<td>
+													<p style="text-align:center">Е140</p>
+												</td>
+												<td>
+													<p style="text-align:center">24</p>
+												</td>
+											</tr>
+											<tr>
+												<td>
+													<p>MJPB 6</p>
+												</td>
+												<td>
+													<p style="text-align:center">коричневый</p>
+												</td>
+												<td>
+													<p style="text-align:center">коричневый</p>
+												</td>
+												<td>
+													<p style="text-align:center">6</p>
+												</td>
+												<td>
+													<p style="text-align:center">6</p>
+												</td>
+												<td>
+													<p style="text-align:center">Е140</p>
+												</td>
+												<td>
+													<p style="text-align:center">23</p>
+												</td>
+											</tr>
+											<tr>
+												<td>
+													<p>MJPB 6-10</p>
+												</td>
+												<td>
+													<p style="text-align:center">коричневый</p>
+												</td>
+												<td>
+													<p style="text-align:center">зеленый</p>
+												</td>
+												<td>
+													<p style="text-align:center">6</p>
+												</td>
+												<td>
+													<p style="text-align:center">10</p>
+												</td>
+												<td>
+													<p style="text-align:center">Е140</p>
+												</td>
+												<td>
+													<p style="text-align:center">23</p>
+												</td>
+											</tr>
+											<tr>
+												<td>
+													<p>MJPB 6-16</p>
+												</td>
+												<td>
+													<p style="text-align:center">коричневый</p>
+												</td>
+												<td>
+													<p style="text-align:center">голубой</p>
+												</td>
+												<td>
+													<p style="text-align:center">6</p>
+												</td>
+												<td>
+													<p style="text-align:center">16</p>
+												</td>
+												<td>
+													<p style="text-align:center">Е140</p>
+												</td>
+												<td>
+													<p style="text-align:center">22</p>
+												</td>
+											</tr>
+											<tr>
+												<td>
+													<p>MJPB 10</p>
+												</td>
+												<td>
+													<p style="text-align:center">зеленый</p>
+												</td>
+												<td>
+													<p style="text-align:center">зеленый</p>
+												</td>
+												<td>
+													<p style="text-align:center">10</p>
+												</td>
+												<td>
+													<p style="text-align:center">10</p>
+												</td>
+												<td>
+													<p style="text-align:center">Е140</p>
+												</td>
+												<td>
+													<p style="text-align:center">22</p>
+												</td>
+											</tr>
+											<tr>
+												<td>
+													<p>MJPB 10-16</p>
+												</td>
+												<td>
+													<p style="text-align:center">зеленый</p>
+												</td>
+												<td>
+													<p style="text-align:center">голубой</p>
+												</td>
+												<td>
+													<p style="text-align:center">10</p>
+												</td>
+												<td>
+													<p style="text-align:center">16</p>
+												</td>
+												<td>
+													<p style="text-align:center">Е140</p>
+												</td>
+												<td>
+													<p style="text-align:center">22</p>
+												</td>
+											</tr>
+											<tr>
+												<td>
+													<p>MJPB 10-25</p>
+												</td>
+												<td>
+													<p style="text-align:center">зеленый</p>
+												</td>
+												<td>
+													<p style="text-align:center">оранжевый</p>
+												</td>
+												<td>
+													<p style="text-align:center">10</p>
+												</td>
+												<td>
+													<p style="text-align:center">25</p>
+												</td>
+												<td>
+													<p style="text-align:center">Е140</p>
+												</td>
+												<td>
+													<p style="text-align:center">20</p>
+												</td>
+											</tr>
+											<tr>
+												<td>
+													<p>MJPB 16</p>
+												</td>
+												<td>
+													<p style="text-align:center">голубой</p>
+												</td>
+												<td>
+													<p style="text-align:center">голубой</p>
+												</td>
+												<td>
+													<p style="text-align:center">16</p>
+												</td>
+												<td>
+													<p style="text-align:center">16</p>
+												</td>
+												<td>
+													<p style="text-align:center">Е140</p>
+												</td>
+												<td>
+													<p style="text-align:center">21</p>
+												</td>
+											</tr>
+											<tr>
+												<td>
+													<p>MJPB 16-25</p>
+												</td>
+												<td>
+													<p style="text-align:center">голубой</p>
+												</td>
+												<td>
+													<p style="text-align:center">оранжевый</p>
+												</td>
+												<td>
+													<p style="text-align:center">16</p>
+												</td>
+												<td>
+													<p style="text-align:center">25</p>
+												</td>
+												<td>
+													<p style="text-align:center">Е140</p>
+												</td>
+												<td>
+													<p style="text-align:center">23</p>
+												</td>
+											</tr>
+											<tr>
+												<td>
+													<p>MJPB 16-35</p>
+												</td>
+												<td>
+													<p style="text-align:center">голубой</p>
+												</td>
+												<td>
+													<p style="text-align:center">красный</p>
+												</td>
+												<td>
+													<p style="text-align:center">16</p>
+												</td>
+												<td>
+													<p style="text-align:center">35</p>
+												</td>
+												<td>
+													<p style="text-align:center">Е140</p>
+												</td>
+												<td>
+													<p style="text-align:center">22</p>
+												</td>
+											</tr>
+											<tr>
+												<td>
+													<p>MJPB 25</p>
+												</td>
+												<td>
+													<p style="text-align:center">оранжевый</p>
+												</td>
+												<td>
+													<p style="text-align:center">оранжевый</p>
+												</td>
+												<td>
+													<p style="text-align:center">25</p>
+												</td>
+												<td>
+													<p style="text-align:center">25</p>
+												</td>
+												<td>
+													<p style="text-align:center">Е140</p>
+												</td>
+												<td>
+													<p style="text-align:center">22</p>
+												</td>
+											</tr>
+											<tr>
+												<td>
+													<p>MJPB 25-35</p>
+												</td>
+												<td>
+													<p style="text-align:center">оранжевый</p>
+												</td>
+												<td>
+													<p style="text-align:center">красный</p>
+												</td>
+												<td>
+													<p style="text-align:center">25</p>
+												</td>
+												<td>
+													<p style="text-align:center">35</p>
+												</td>
+												<td>
+													<p style="text-align:center">Е140</p>
+												</td>
+												<td>
+													<p style="text-align:center">21</p>
+												</td>
+											</tr>
+											<tr>
+												<td>
+													<p>MJPB 35</p>
+												</td>
+												<td>
+													<p style="text-align:center">красный</p>
+												</td>
+												<td>
+													<p style="text-align:center">красный</p>
+												</td>
+												<td>
+													<p style="text-align:center">35</p>
+												</td>
+												<td>
+													<p style="text-align:center">35</p>
+												</td>
+												<td>
+													<p style="text-align:center">Е140</p>
+												</td>
+												<td>
+													<p style="text-align:center">20</p>
+												</td>
+											</tr>
+										</tbody>
+									</table>
+
 								</div>
 							</article>
 						</div>
@@ -545,16 +945,16 @@
     </div>
 </footer>
 		</div>
-		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20231222111328"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20231222111328"></script>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20231222175319"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20231222175319"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20231222111328"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20231222111328"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20231222111328"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20231222111328"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20231222111328"></script>
-<script src="https://www.youtube.com/iframe_api?v2.18&_v=20231222111328"></script>
-<script src="js/app.min.js?_v=20231222111328"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20231222175319"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20231222175319"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20231222175319"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20231222175319"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20231222175319"></script>
+<script src="https://www.youtube.com/iframe_api?v2.18&_v=20231222175319"></script>
+<script src="js/app.min.js?_v=20231222175319"></script>
 	</body>
 
 </html>
