--- a/layout/products-2.html
+++ b/layout/products-2.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20231114234520">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20231114234520">
-	<link rel="stylesheet" href="css/style.min.css?_v=20231114234520">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20231222174401">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20231222174401">
+	<link rel="stylesheet" href="css/style.min.css?_v=20231222174401">
 
 
 </head>
@@ -318,9 +318,7 @@
 									<div class="products__grid">
 										<div class="products__grid-item product">
 											<a href="/production/armatura/ankerno_podderjivayushaya_gruppa_sip_1_i_sip_2/ankernie_zajimi_pa_1500_psk_pa_1500n_psk_dlya_04_kv/" class="product__image">
-												<picture>
-													<source srcset="" type="image/webp"><img src="/public/uploads/products/sip1sip2(2).jpg" alt="">
-												</picture>
+												<picture><source srcset="img/products/product-1.webp"type="image/webp"><img src="img/products/product-1.png" alt=""></picture>
 											</a>
 											<div class="product__desc">
 												<a href="/production/armatura/ankerno_podderjivayushaya_gruppa_sip_1_i_sip_2/ankernie_zajimi_pa_1500_psk_pa_1500n_psk_dlya_04_kv/" class="product__title">
@@ -336,9 +334,7 @@
 										</div>
 										<div class="products__grid-item product">
 											<a href="/production/armatura/ankerno_podderjivayushaya_gruppa_sip_1_i_sip_2/komplekti_promejutochnoy_podveski_es_psk/" class="product__image">
-												<picture>
-													<source srcset="" type="image/webp"><img src="/public/uploads/products/b9828b180a84a5402068f2dd18389323.jpg" alt="">
-												</picture>
+												<picture><source srcset="img/products/product-1.webp"type="image/webp"><img src="img/products/product-1.png" alt=""></picture>
 											</a>
 											<div class="product__desc">
 												<a href="/production/armatura/ankerno_podderjivayushaya_gruppa_sip_1_i_sip_2/komplekti_promejutochnoy_podveski_es_psk/" class="product__title">
@@ -354,9 +350,7 @@
 										</div>
 										<div class="products__grid-item product">
 											<a href="/production/armatura/ankerno_podderjivayushaya_gruppa_sip_1_i_sip_2/podderjivayushiy_zajim_rs_1500_psk_dlya_04_kv/" class="product__image">
-												<picture>
-													<source srcset="" type="image/webp"><img src="/public/uploads/products/82d752697cb43afd65aaf7e99eff4ae5.png" alt="">
-												</picture>
+												<picture><source srcset="img/products/product-1.webp"type="image/webp"><img src="img/products/product-1.png" alt=""></picture>
 											</a>
 											<div class="product__desc">
 												<a href="/production/armatura/ankerno_podderjivayushaya_gruppa_sip_1_i_sip_2/podderjivayushiy_zajim_rs_1500_psk_dlya_04_kv/" class="product__title">
@@ -520,16 +514,16 @@
     </div>
 </footer>
 		</div>
-		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20231114234520"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20231114234520"></script>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20231222174401"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20231222174401"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20231114234520"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20231114234520"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20231114234520"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20231114234520"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20231114234520"></script>
-<script src="https://www.youtube.com/iframe_api?v2.18&_v=20231114234520"></script>
-<script src="js/app.min.js?_v=20231114234520"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20231222174401"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20231222174401"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20231222174401"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20231222174401"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20231222174401"></script>
+<script src="https://www.youtube.com/iframe_api?v2.18&_v=20231222174401"></script>
+<script src="js/app.min.js?_v=20231222174401"></script>
 	</body>
 
 </html>
