ext goody photos update

--- a/src/site/templates/production/production__goody.htm
+++ b/src/site/templates/production/production__goody.htm
@@ -8,6 +8,7 @@
                                     <a href="{{PREVIEWFULL}}" data-fslightbox class="main__product-image swiper-slide">
                                         <picture><source srcset="{{PREVIEWFULLWEBP}}" type="image/webp"><img src="{{PREVIEWFULL}}" class="cover-image" alt="{{ALT}}"></picture>
                                     </a>
+                                    {{EXTPHOTOS}}
                                     <a href="tel:{{PHONELINK}}" class="main__product-label product-label icon-phone">
                                         <span class="product-label__title">
                                             Консультация по продукции
