fix ext goody photos

--- a/src/site/templates/production/production__goody_extphotos.htm
+++ b/src/site/templates/production/production__goody_extphotos.htm
@@ -4,6 +4,5 @@
                                                 {{LIST}}
                                             </div>
                                         </div>
-                                        <div class="main__product-next"></div>
-                                        <div class="main__product-prev"></div>
+                                        {{ARROWS}}
                                     </div>
