--- a/src/site/templates/layout/footer.htm
+++ b/src/site/templates/layout/footer.htm
@@ -34,13 +34,25 @@
             </ul>
             <ul class="footer-body__list">
                 <li class="footer-body__list-item footer-body__list-caption">
-                    Арматура для СИП
+                    <a href="/production/">Арматура для СИП</a>
                 </li>
                 <li class="footer-body__list-item">
-                    <a href="/production/" class="footer-body__list-link">Каталог</a>
+                    <a href="/production/armatura/otvetvitelno_prokalivayushaya_gruppa/" class="footer-body__list-link">Ответвительно-прокалывающая арматура</a>
                 </li>
                 <li class="footer-body__list-item">
-                    <a href="#" class="footer-body__list-link">Сертификация</a>
+                    <a href="/production/armatura/zajimi_prokalivayushie_otvetvitelnie/" class="footer-body__list-link">Зажимы прокалывающие ответвительные</a>
+                </li>
+                <li class="footer-body__list-item">
+                    <a href="/production/armatura/soedinitelnaya_gruppa/" class="footer-body__list-link">Соединительная арматура</a>
+                </li>
+                <li class="footer-body__list-item">
+                    <a href="/production/armatura/ankerno_podderjivayushaya_gruppa_sip_1_i_sip_2/" class="footer-body__list-link">Анкерно-поддерживающая арматура СИП-1 и СИП-2</a>
+                </li>
+                <li class="footer-body__list-item">
+                    <a href="/production/armatura/ankerno_podderjivayushaya_gruppa_sip_4/" class="footer-body__list-link">Анкерно-поддерживающая группа СИП-4</a>
+                </li>
+                <li class="footer-body__list-item">
+                    <a href="/production/armatura/vspomogatelnaya_gruppa/" class="footer-body__list-link">Вспомогательная арматура</a>
                 </li>
             </ul>
             <ul class="footer-body__list">
