--- a/layout/product.html
+++ b/layout/product.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20231222111328">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20231222111328">
-	<link rel="stylesheet" href="css/style.min.css?_v=20231222111328">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20231225203242">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20231225203242">
+	<link rel="stylesheet" href="css/style.min.css?_v=20231225203242">
 
 
 </head>
@@ -139,7 +139,7 @@
                 <li class="menu__item menu-parent">
                     <a href="" class="menu__link">АРМАТУРА ДЛЯ СИП</a>
                     <button class="menu__arrow icon-arrow"></button>
-                    <div class="submenu">
+                    <div class="submenu submenu-lg">
                         <ul class="submenu__list">
                             <li class="submenu__item">
                                 <a href="" class="submenu__link">
@@ -230,9 +230,9 @@
 							<div class="main__product">
 								<div class="main__product-side">
 									<div class="main__product-content">
-										<div class="main__product-image">
+										<a href="img/products/product-1.png" data-fslightbox class="main__product-image">
 											<picture><source srcset="img/products/product-1.webp"type="image/webp"><img src="img/products/product-1.png" class="cover-image" alt="product"></picture>
-										</div>
+										</a>
 										<a href="tel:884323338888" class="main__product-label product-label icon-phone">
 											<span class="product-label__title">
 												Консультация по продукции
@@ -545,16 +545,16 @@
     </div>
 </footer>
 		</div>
-		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20231222111328"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20231222111328"></script>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20231225203242"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20231225203242"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20231222111328"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20231222111328"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20231222111328"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20231222111328"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20231222111328"></script>
-<script src="https://www.youtube.com/iframe_api?v2.18&_v=20231222111328"></script>
-<script src="js/app.min.js?_v=20231222111328"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20231225203242"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20231225203242"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20231225203242"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20231225203242"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20231225203242"></script>
+<script src="https://www.youtube.com/iframe_api?v2.18&_v=20231225203242"></script>
+<script src="js/app.min.js?_v=20231225203242"></script>
 	</body>
 
 </html>
