sub nav for production fix

--- a/src/site/templates/components/navigation/sub-navigation.htm
+++ b/src/site/templates/components/navigation/sub-navigation.htm
@@ -1,4 +1,4 @@
-<div class="submenu">
+<div class="submenu {{CLASS}}">
                         <ul class="submenu__list">
                             {{CONTENT}}
                         </ul>
