--- a/src/site/templates/layout/footer.htm
+++ b/src/site/templates/layout/footer.htm
@@ -86,10 +86,13 @@
                 <a href="/anticorruption-policy/" class="footer-copy__privacy-link">
                     Антикоррупционная политика
                 </a>
+                <a href="/ethics-code/" class="footer-copy__privacy-link">
+                    Кодекс этики и служебного поведения
+                </a>
             </div>
             <div class="footer-copy__production">
                 <div class="footer-copy__production-title">
-                    Сделано в
+                    Сделано&nbsp;в
                 </div>
                 <a href="https://proudly.ru/" target="_blank" class="footer-copy__production-link">
                     proudly
